--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,13 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Install and Build 🔧
         run: |
           yarn install
           yarn build
+          mkdir dist/assets/
+          ls
+          mv dist/main.* dist/assets
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
